--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -2,7 +2,7 @@
     background-image: url(../../assets/images/fire-vegetables.jpg);
     background-size: cover;
     min-height: var(--banner-height);
-    width: 100vw;
+    /* width: 100vw; */
     display: flex;
     flex-direction: column;
     align-items: center;
