--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,6 @@ body {
     padding: 0;
     box-sizing: border-box;
     min-height: 100vh;
-    width: 100vw;
 }
 
 a {
